# nhs_herbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TOX_SETUP.md  conftest.py  mypy.ini  pyproject.toml  release_notes.md  requirements.txt  tox.ini
.github/workflows/: python-package.yml
docs/: ODBC_SETUP.md  mkdocs.yml
docs/docs/: index.md  tox-usage.md
nhs_herbot/: __init__.py  errors.py  joins.py  load_csv.py  odbc_utils.py  sql.py  utils.py
tests/driver_tests/: Dockerfile.no-odbc-libs  Dockerfile.no-pyodbc  Dockerfile.with-microsoft-driver  Dockerfile.with-odbc  README.md  __init__.py  run_docker_tests.sh  run_fast_tests.sh
tests/unittests/: test_errors.py  test_joins.py  test_load_csv.py  test_sql.py  test_utils.py  test_version.py
