[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nhs_herbot"
version = "2025.08.12"
description = "Healthcare's Handy Easy and Reusable Box of Tricks"
authors = [
  { name = "Joseph Wilson" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "loguru>=0.5.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "pyodbc>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.1",
    "pytest-xdist>=2.4.0",
]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "tox>=4.0.0",
    "pre-commit>=2.15.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
)/
'''

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["nhs_herbot"]
force_sort_within_sections = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
