[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nhs_herbot"
version = "2025.08.12"
description = "Healthcare's Handy Easy and Reusable Box of Tricks"
authors = [
  { name = "Joseph Wilson" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "loguru>=0.5.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
sql = [
    "pyodbc>=4.0.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.1",
    "pytest-xdist>=2.4.0",
]
dev = [
    "ruff>=0.1.0",
    "tox>=4.0.0",
    "pre-commit>=2.15.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
]

[tool.ruff]
line-length = 99
src = ["nhs_herbot"]
include = ["pyproject.toml", "nhs_herbot/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "I",
    "F",
    "E",
    "W",
    "UP",
    "B",
    "SIM",
    "C4",
    "PIE",
    "RET",
    "PT",
    "ARG",
    "PL",
    "PERF",
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value
    "PLR0915",  # Too many statements
    "PLR0912",  # Too many branches
    "ARG002",   # Unused method argument
    "E501",     # Line too long (handled by formatter)
    "PLC0415",  # Import should be at top-level (needed for lazy imports)
    "PLW2901",  # Loop variable overwritten (false positive)
    "PT006",    # Wrong parametrize type (tuple vs string is fine)
    "PT011",    # pytest.raises too broad (sometimes intentional)
    "B028",     # No explicit stacklevel (not critical)
]

[tool.ruff.lint.isort]
known-first-party = ["nhs_herbot"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["nhs_herbot"]
branch = true
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
